<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
android:background="@drawable/boss"

    tools:context=".MainActivity">

  <TextView
      android:id="@+id/tvInput"
      android:layout_width="match_parent"
      android:layout_height="250dp"
      android:textColor="#e5f1ef"
      android:padding="10dp"
      android:textSize="48sp"
      android:text="@string/calc_text"
      android:gravity="end|bottom"
  />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_weight="1"
      >

      <Button
          android:id="@+id/btnseven"
          android:layout_width="0dp"
          android:layout_height="match_parent"
        android:layout_weight="1"
          android:text="@string/_7"
          android:onClick="onDigit"
          android:layout_margin="2dp"
          tools:ignore="NestedWeights" />

    <Button
        android:id="@+id/btneight"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/_8"
        android:onClick="onDigit"
        android:layout_margin="2dp"
        />


    <Button
        android:id="@+id/btnnine"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/_9"
        android:onClick="onDigit"
        android:layout_margin="2dp"
        />

    <Button
        android:id="@+id/btndivide"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:onClick="onOperator"
        android:text="@string/divide"
        android:layout_margin="2dp"
        />
    </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_weight="1"
      >

    <Button
        android:id="@+id/btnfour"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/_4"
        android:onClick="onDigit"
        android:layout_margin="2dp"
        />

    <Button
        android:id="@+id/btnfive"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/_5"
        android:onClick="onDigit"
        android:layout_margin="2dp"
        />


    <Button
        android:id="@+id/btnsix"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/_6"
        android:onClick="onDigit"
        android:layout_margin="2dp"
        />

    <Button
        android:id="@+id/btnmultiply"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:onClick="onOperator"
        android:text="@string/multiply"
        android:layout_margin="2dp"
        />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_weight="1"
      >

    <Button
        android:id="@+id/btnone"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/_1"
        android:onClick="onDigit"
        android:layout_margin="2dp"
        />

    <Button
        android:id="@+id/btntwo"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/_2"
        android:onClick="onDigit"
        android:layout_margin="2dp"
        />


    <Button
        android:id="@+id/btnthree"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/_3"
        android:onClick="onDigit"
        android:layout_margin="2dp"
        />

    <Button
        android:id="@+id/btnminus"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:onClick="onOperator"
        android:text="@string/minus"
        android:layout_margin="2dp"
        />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_weight="1"
      >

    <Button
        android:id="@+id/btnzero"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:text="@string/_0"
        android:onClick="onDigit"
        android:layout_margin="2dp"
        />
    <Button
        android:id="@+id/btnDot"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:text="@string/dot"
        android:onClick="onDecimalPoint"
        android:layout_margin="2dp"
        />


    <Button
        android:id="@+id/btnclr"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/clr"
        android:onClick="onClear"
        android:layout_margin="2dp"
        />

    <Button
        android:id="@+id/btnadd"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:onClick="onOperator"
        android:text="@string/add"
        android:layout_margin="2dp"
        />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_weight="1"
      >

    <Button
        android:id="@+id/btnEqual"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:text="@string/Equal"
        android:onClick="onEqual"
        android:layout_margin="2dp"
        />



  </LinearLayout>






</LinearLayout>